# python-release-test

./: LICENSE  README.md  pyproject.toml
src/python-release-test/: app.py  pyproject.toml
